--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>TEMPLATE</title>
+	<title>FB Clone</title>
 	<!-- font awesome -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
 		integrity="sha512-...." crossorigin="anonymous" />
@@ -15,7 +15,7 @@
 
 <body>
 	@@include("components/_header.html")
-
+	@@include("pages/main-page.html")
 
 	@@include("icons/_icons.html")
 	<script src="https://unpkg.com/split-type"></script>
