create left and right sidebar, sort templates

--- a/src/pages/main-page.html
+++ b/src/pages/main-page.html
@@ -1,44 +1,18 @@
 <main class="main">
 
+
    <!-- LEFT SIDE BAR -->
-   <div class="main__left">
-      <ul class="main__left-links">
-         <li>
-            <a href="#">
-               <img src="img" alt="">
-            </a>
-         </li>
-         <li>
-            <a href="#">
-               <img src="img" alt="">
-            </a>
-         </li>
-         <li>
-            <a href="#">
-               <img src="img" alt="">
-            </a>
-         </li>
-         <li>
-            <a href="#">
-               <img src="img" alt="">
-            </a>
-         </li>
-         <li>
-            <a href="#">
-               <img src="img" alt="">
-            </a>
-         </li>
-      </ul>
-   </div>
+   @@include("../components/_left-sidebar.html")
+   <!-- LEFT SIDE BAR END -->
 
    <!-- MAIN CONTENT -->
    <div class="main__content">
 
    </div>
+   <!-- MAIN CONTENT END -->
 
    <!-- RIGHT SIDE BAR -->
-   <div class="main__right">
-
-   </div>
+   @@include("../components/_right-sidebar.html")
+   <!-- RIGHT SIDE BAR END -->
 
 </main>
