--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,17 @@
 	<!-- font awesome /-->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
 	<link rel="stylesheet" href="css/style.min.css">
+	<script src="https://kit.fontawesome.com/2b9e2b5f9c.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+
 	@@include("components/_header.html")
+
 	@@include("pages/main-page.html")
 
 	@@include("icons/_icons.html")
 	<script src="https://unpkg.com/split-type"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
 	<script src="js/slick.min.js"></script>
