--- a/src/pages/main-page.html
+++ b/src/pages/main-page.html
@@ -8,6 +8,15 @@
    <!-- MAIN CONTENT -->
    <div class="main__content">
 
+      <div class="story-gallery">
+         <div class="story"
+            style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url(img/vasa.jpg);">
+            <img src="img/upload.png" alt="upload">
+            <p>Опублікувати Історію</p>
+         </div>
+      </div>
+
+
    </div>
    <!-- MAIN CONTENT END -->
 
