add slider in story section

--- a/src/pages/main-page.html
+++ b/src/pages/main-page.html
@@ -8,14 +8,78 @@
    <!-- MAIN CONTENT -->
    <div class="main__content">
 
-      <div class="story-gallery">
-         <div class="story"
-            style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url(img/vasa.jpg);">
-            <img src="img/upload.png" alt="upload">
-            <p>Опублікувати Історію</p>
+      <div class="swiper storySlider">
+         <div class="story-gallery swiper-wrapper">
+
+            <!-- STORY -->
+            <div class="story swiper-slide"
+               style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url(img/vasa.jpg);">
+               <img src="img/upload.png" alt="upload">
+               <p>Опублікувати Історію</p>
+            </div>
+            <!-- STORY END -->
+            <!-- STORY -->
+            <div class="story swiper-slide"
+               style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url(img/iren.jpg);">
+               <p>Ірина Пец</p>
+            </div>
+            <!-- STORY END -->
+            <!-- STORY -->
+            <div class="story swiper-slide"
+               style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url(img/nazar.jpg);">
+               <p>Назар Кекош</p>
+            </div>
+            <!-- STORY END -->
+            <!-- STORY -->
+            <div class="story swiper-slide"
+               style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url(img/ihor.jpg);">
+               <p>Ігор Лялюк</p>
+            </div>
+            <!-- STORY END -->
+            <!-- STORY -->
+            <div class="story swiper-slide"
+               style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url(img/milena.jpg);">
+               <p>Мілена Дідух</p>
+            </div>
+            <!-- STORY END -->
+            <!-- STORY -->
+            <div class="story swiper-slide"
+               style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url(img/mary.jpg);">
+               <p>Марія Пінчак</p>
+            </div>
+            <!-- STORY END -->
+            <!-- STORY -->
+            <div class="story swiper-slide"
+               style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url(img/andriy.jpg);">
+               <p>Андрій Мицько</p>
+            </div>
+            <!-- STORY END -->
+            <!-- STORY -->
+            <div class="story swiper-slide"
+               style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url(img/rostk.jpg);">
+               <p>Ростислав Михаць</p>
+            </div>
+            <!-- STORY END -->
+            <!-- STORY -->
+            <div class="story swiper-slide"
+               style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url(img/vanya.jpg);">
+               <p>Іван Ковба</p>
+            </div>
+            <!-- STORY END -->
+            <!-- STORY -->
+            <div class="story swiper-slide"
+               style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url(img/dima.jpg);">
+               <p>Дмитро Мелько</p>
+            </div>
+            <!-- STORY END -->
+            <!-- STORY -->
+            <div class="story swiper-slide"
+               style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url(img/taras.jpg);">
+               <p>Тарас Карпінський</p>
+            </div>
+            <!-- STORY END -->
          </div>
       </div>
-
 
    </div>
    <!-- MAIN CONTENT END -->
