--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
 		integrity="sha512-...." crossorigin="anonymous" />
 	<!-- font awesome /-->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 	<link rel="stylesheet" href="css/style.min.css">
 	<script src="https://kit.fontawesome.com/2b9e2b5f9c.js" crossorigin="anonymous"></script>
 </head>
@@ -22,9 +22,10 @@
 
 	@@include("icons/_icons.html")
 	<script src="https://unpkg.com/split-type"></script>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
 	<script src="js/slick.min.js"></script>
+	<script src="js/story.js"></script>
 
 
 </body>
