add sections fade animations

--- a/src/pages/main-page.html
+++ b/src/pages/main-page.html
@@ -9,71 +9,80 @@
    <div class="main__content">
 
       <div class="story-gallery ">
-
          <!-- STORY -->
          <div class="story"
             style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url(img/vasa.jpg);">
-            <img src="img/upload.png" alt="upload">
+            <img src="img/upload.png" alt="upload" class="story-active">
             <p>Опублікувати Історію</p>
          </div>
          <!-- STORY END -->
          <!-- STORY -->
          <div class="story"
             style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url(img/iren.jpg);">
+            <img src="img/iren.jpg" alt="upload">
             <p>Ірина Пец</p>
          </div>
          <!-- STORY END -->
          <!-- STORY -->
          <div class="story"
             style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url(img/nazar.jpg);">
+            <img src="img/nazar.jpg" alt="upload">
             <p>Назар Кекош</p>
          </div>
          <!-- STORY END -->
          <!-- STORY -->
          <div class="story"
             style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url(img/ihor.jpg);">
+            <img src="img/ihor.jpg" alt="upload">
             <p>Ігор Лялюк</p>
          </div>
          <!-- STORY END -->
          <!-- STORY -->
          <div class="story"
             style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url(img/milena.jpg);">
+            <img src="img/milena.jpg" alt="upload">
             <p>Мілена Дідух</p>
          </div>
          <!-- STORY END -->
          <!-- STORY -->
          <div class="story"
             style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url(img/mary.jpg);">
+            <img src="img/mary.jpg" alt="upload">
             <p>Марія Пінчак</p>
          </div>
          <!-- STORY END -->
          <!-- STORY -->
          <div class="story"
             style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url(img/andriy.jpg);">
+            <img src="img/andriy.jpg" alt="upload">
             <p>Андрій Мицько</p>
          </div>
          <!-- STORY END -->
          <!-- STORY -->
          <div class="story"
             style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url(img/rostk.jpg);">
+            <img src="img/rostk.jpg" alt="upload">
             <p>Ростислав Михаць</p>
          </div>
          <!-- STORY END -->
          <!-- STORY -->
          <div class="story"
             style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url(img/vanya.jpg);">
+            <img src="img/vanya.jpg" alt="upload">
             <p>Іван Ковба</p>
          </div>
          <!-- STORY END -->
          <!-- STORY -->
          <div class="story"
             style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url(img/dima.jpg);">
+            <img src="img/dima.jpg" alt="upload">
             <p>Дмитро Мелько</p>
          </div>
          <!-- STORY END -->
          <!-- STORY -->
          <div class="story"
             style="background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.5)), url(img/taras.jpg);">
+            <img src="img/taras.jpg" alt="upload">
             <p>Тарас Карпінський</p>
          </div>
          <!-- STORY END -->
