--- a/src/index.html
+++ b/src/index.html
@@ -20,12 +20,15 @@
 
 	@@include("pages/main-page.html")
 
+	@@include("components/_footer.html")
+
 	@@include("icons/_icons.html")
 	<script src="https://unpkg.com/split-type"></script>
 	<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
 	<script src="js/slick.min.js"></script>
 	<script src="js/story.js"></script>
+	<script src="js/settings.js"></script>
 
 
 </body>
