--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
 	<script src="js/slick.min.js"></script>
 	<script src="js/story.js"></script>
 	<script src="js/settings.js"></script>
+	<script src="js/script.js"></script>
 
 
 </body>
