--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,10 @@
 
 	@@include("components/_header.html")
 
+	@@include("components/_all-events.html")
 	@@include("pages/main-page.html")
+
+
 
 	@@include("components/_footer.html")
 
@@ -30,6 +33,7 @@
 	<script src="js/story.js"></script>
 	<script src="js/settings.js"></script>
 	<script src="js/script.js"></script>
+	<script src="js/events-popup.js"></script>
 
 
 </body>
